--- a/src/App.css
+++ b/src/App.css
@@ -1,31 +1,30 @@
-.App {
-  text-align: center;
+*{
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+body{
+  background-color: #ccc;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+h1{
+  padding: 15px 20px;
+  background-color: #234658;
+  color: #fff;
+  margin-bottom: 30px;
 }
 
-.App-link {
-  color: #61dafb;
+
+#tasksContainer {
+  padding: 0px 40px;
+
 }
 
-.heart {
-  color: #ff0000;
-}
-
-.small {
-  font-size: 0.75rem;
+.task{
+  margin: 20px 40px;
+  border-top: 1px solid #000;
+  border-bottom: 1px solid #000;
+  padding: 20px 10px
 }
