--- a/src/App.css
+++ b/src/App.css
@@ -2,18 +2,20 @@
   padding: 0;
   margin: 0;
   box-sizing: border-box;
+  color: #222;
+  transition: .3s;
 }
 
 body{
-  background-color: #ccc;
+  background-color: #dcdcdd;
   font-family: Arial, Helvetica, sans-serif;
 }
 
 h1{
-  padding: 15px 20px;
-  background-color: #234658;
-  color: #fff;
-  margin-bottom: 30px;
+  margin: 30px 40px;
+  letter-spacing: 1.1px;
+  color: #111;
+  font-size: 42px;
 }
 
 
@@ -22,9 +24,128 @@ h1{
 
 }
 
-.task{
+#monthExpenses{
+  display: flex;
+  position: relative;
+  margin: 40px 50px;
+  gap: 50px 8vw;
+  flex-wrap: wrap;
+  justify-content: center;
+  max-height: 90vh;
+  
+}
+
+.expense{
+  border-radius: 19px;
+  background: linear-gradient(145deg, #c6c6c7, #ebebec);
+  box-shadow:  25px 25px 50px #bbbbbc,
+               -25px -25px 50px #fdfdfe;
+    height: 250px;
+    width: 250px;
+    text-align: center;
+    padding: 20px 10px;
+}
+
+.expenseDate{
+  margin-bottom: 10px;
+}
+
+.expenseTitle{
+  margin-top: 20px;
+  position: relative;
+}
+
+.expenseCost{
+  margin-top: 10px;
+  color: #c00;
+  font-size: 32px;
+}
+
+.positive{
+  color: #0b7 !important;
+}
+
+.deleteBtn{
+  border: 2px solid #e00;
+  font-size: 28px;
+  background-color: #e00;
+  margin-top: 15px;
+  cursor: pointer;
+  height: 60px;
+  width: 60px;
+  border-radius: 10px;
+  box-shadow: 0 0 12px -1px #0005;
+}
+
+.deleteBtn:hover{
+  background-color: #b00;
+  border-color: #b00;
+}
+
+
+#addExp{
   margin: 20px 40px;
-  border-top: 1px solid #000;
-  border-bottom: 1px solid #000;
-  padding: 20px 10px
+  margin-top: 100px;
+  border-top: 2px solid #222;
+  border-bottom: 2px solid #222;
+  padding: 30px 30px;
+  text-align: center;
+}
+
+.addTitle{
+  font-size: 32px;
+  margin: 0;
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+input[type="text"]{
+  padding: 10px 15px;
+  font-size: 22px;
+  margin: 10px auto;
+  background-color: transparent;
+  border: none;
+  border-bottom: 3px solid #199;
+  margin-right: 5%;
+  margin-bottom: 20px;
+}
+
+#addTitleTb{
+  width: 70%;
+}
+
+#addCostsTb{
+  width: 20%;
+  margin-right: 0;
+}
+
+label{
+  position: relative;
+  font-size: 18px;
+}
+
+#chk{
+  font-size: 20px;
+  width: 30px;
+  height: 30px;
+  margin-bottom: 30px;
+  position: relative;
+  top: 7px;
+}
+
+#addBtn{
+  position: relative;
+  border: none;
+  font-size: 18px;
+  background-color: #fff4;
+  cursor: pointer;
+  padding: 20px 30px;
+  border-radius: 10px;
+  box-shadow: 0 0 12px -1px #0005;
+  margin: 0 auto;
+}
+
+#addBtn:hover{
+  background-color: #0b7;
+
 }
